--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0300.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0300.html
@@ -286,12 +286,7 @@
       <span class="ocr_line" title="bbox 216 777 1901 850">
         <span id="w_55" class="ocr_word" title="bbox 216 803 567 850" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">κατεχομένους</ins>
-          </span>
-        </span>
-        <span id="w_56" class="ocr_word" title="bbox 580 798 590 810">
-          <span class="alternatives">
-            <ins title="nlp 2.00">·</ins>
+            <ins class="alt" title="nlp 2.00">κατεχομένους·</ins>
           </span>
         </span>
         <span id="w_57" class="ocr_word" title="bbox 638 801 722 839" lang="grc">
@@ -1134,7 +1129,7 @@
         </span>
         <span id="w_218" class="ocr_word" title="bbox 777 2255 1041 2322" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">'Ρωμαϊκαὶ</ins>
+            <ins title="nlp 2.00">Ρωμαϊκαὶ</ins>
           </span>
         </span>
         <span id="w_219" class="ocr_word" title="bbox 1074 2257 1402 2322" lang="grc">
@@ -1317,7 +1312,7 @@
         </span>
         <span id="w_254" class="ocr_word" title="bbox 351 2562 607 2623" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">'Ρωμαϊκὸν</ins>
+            <ins title="nlp 2.00">Ρωμαϊκὸν</ins>
           </span>
         </span>
         <span id="w_255" class="ocr_word" title="bbox 652 2585 717 2628" lang="grc">
@@ -1421,7 +1416,7 @@
         </span>
         <span id="w_274" class="ocr_word" title="bbox 1037 2721 1311 2787" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">'Ρωμαϊκῆς</ins>
+            <ins title="nlp 2.00">Ρωμαϊκῆς</ins>
           </span>
         </span>
         <span id="w_275" class="ocr_word" title="bbox 1365 2741 1456 2786" lang="grc">
@@ -1443,7 +1438,7 @@
       <span class="ocr_line" title="bbox 337 2823 1904 2890">
         <span id="w_278" class="ocr_word" title="bbox 337 2827 362 2865" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">2 δορυαλώτων</ins>
+            <ins title="nlp 2.00">δορυαλώτων</ins>
           </span>
         </span>
         <span id="w_279" class="ocr_word" title="bbox 741 2827 809 2878" lang="grc">
@@ -1483,9 +1478,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 225 2877 1765 2945">
-        <span id="w_286" class="ocr_word" title="bbox 225 2877 290 2932" lang="grc">
+        <span id="w_286_0" class="ocr_word" title="bbox 225 2877 290 2932">
           <span class="alternatives">
-            <ins title="nlp 2.00">τι] μέντοι</ins>
+            <ins class="alt" title="nlp 2.00">τι]</ins>
+          </span>
+        </span>
+        <span id="w_286_1" class="ocr_word" title="bbox 225 2877 290 2932">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">μέντοι</ins>
           </span>
         </span>
         <span id="w_287" class="ocr_word" title="bbox 604 2883 686 2926" lang="grc">
@@ -1520,7 +1520,7 @@
         </span>
         <span id="w_293" class="ocr_word" title="bbox 1395 2885 1661 2945" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">'Ρωμαϊκὸν</ins>
+            <ins title="nlp 2.00">Ρωμαϊκὸν</ins>
           </span>
         </span>
         <span id="w_294" class="ocr_word" title="bbox 1691 2905 1765 2935">
