--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0160.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0160.html
@@ -576,19 +576,19 @@
             <ins class="alt" title="nlp 2.00">ὢν</ins>
           </span>
         </span>
-        <span id="w_113_1" class="ocr_word" title="bbox 1136 1970 1210 2000">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
-          </span>
-        </span>
         <span id="w_114" class="ocr_word" title="bbox 1254 1948 1380 2016" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἀνὴρ</ins>
           </span>
         </span>
-        <span id="w_115" class="ocr_word" title="bbox 1429 1969 1511 1998" lang="grc">
+        <span id="w_115_0" class="ocr_word" title="bbox 1429 1969 1511 1998">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">καὶ</ins>
+            <ins class="alt" title="nlp 2.00">καὶ</ins>
+          </span>
+        </span>
+        <span id="w_115_1" class="ocr_word" title="bbox 1429 1969 1511 1998">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">στρατηγικὴν</ins>
           </span>
         </span>
       </span>
@@ -675,14 +675,14 @@
             <ins class="alt" title="nlp 2.00">ὢν</ins>
           </span>
         </span>
-        <span id="w_132_1" class="ocr_word" title="bbox 1505 2126 1576 2155">
+        <span id="w_133_0" class="ocr_word" title="bbox 1611 2124 1702 2169">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
+            <ins class="alt" title="nlp 2.00">τὴν</ins>
           </span>
         </span>
-        <span id="w_133" class="ocr_word" title="bbox 1611 2124 1702 2169" lang="grc">
+        <span id="w_133_1" class="ocr_word" title="bbox 1611 2124 1702 2169">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τὴν</ins>
+            <ins class="alt" title="nlp 2.00">πόλιν</ins>
           </span>
         </span>
       </span>
