--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0196.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0196.html
@@ -59,7 +59,7 @@
         </span>
         <span id="w_9" class="ocr_word" title="bbox 1786 298 1892 366" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τῶν</ins>
+            <ins title="nlp 2.00">[τῶν</ins>
           </span>
         </span>
       </span>
