--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0197.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0197.html
@@ -483,9 +483,14 @@
             <ins class="alt" title="nlp 1.00">τὸν</ins>
           </span>
         </span>
-        <span id="w_91" class="ocr_word" title="bbox 408 1053 605 1120" lang="grc">
+        <span id="w_91_0" class="ocr_word" title="bbox 408 1053 605 1120">
           <span class="alternatives">
-            <ins title="nlp 2.00">Γουλήν</ins>
+            <ins class="alt" title="nlp 2.00">(οὑτος</ins>
+          </span>
+        </span>
+        <span id="w_91_1" class="ocr_word" title="bbox 408 1053 605 1120">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_92" class="ocr_word" title="bbox 654 1053 821 1122" lang="grc">
@@ -511,11 +516,6 @@
         <span id="w_96" class="ocr_word" title="bbox 1420 1055 1683 1123" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">θεράπων)</ins>
-          </span>
-        </span>
-        <span id="w_97" class="ocr_word" title="bbox 1723 1075 1806 1105" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">καὶ</ins>
           </span>
         </span>
       </span>
