--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0413.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0413.html
@@ -478,7 +478,7 @@
         </span>
         <span id="w_90_1" class="ocr_word" title="bbox 1619 996 1826 1048">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
+            <ins title="nlp 2.00">10</ins>
           </span>
         </span>
       </span>
@@ -1123,7 +1123,7 @@
         </span>
         <span id="w_215_1" class="ocr_word" title="bbox 1662 2145 1825 2207">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
+            <ins title="nlp 2.00">25</ins>
           </span>
         </span>
       </span>
