--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0137.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0137.html
@@ -248,9 +248,14 @@
             <ins class="alt" title="nlp 1.00">Κοσμᾶν</ins>
           </span>
         </span>
-        <span id="w_47" class="ocr_word" title="bbox 348 693 511 752" lang="grc">
+        <span id="w_47_0" class="ocr_word" title="bbox 348 693 511 752">
           <span class="alternatives">
-            <ins title="nlp 2.00">(οὔπω</ins>
+            <ins class="alt" title="nlp 2.00">(οὒπω</ins>
+          </span>
+        </span>
+        <span id="w_47_1" class="ocr_word" title="bbox 348 693 511 752">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_48" class="ocr_word" title="bbox 557 713 648 759" lang="grc">
@@ -281,11 +286,6 @@
         <span id="w_53" class="ocr_word" title="bbox 1519 696 1609 745" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">καί</ins>
-          </span>
-        </span>
-        <span id="w_54" class="ocr_word" title="bbox 1643 716 1779 757" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τινας</ins>
           </span>
         </span>
       </span>
@@ -945,9 +945,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 84 1933 1776 2002">
-        <span id="w_183" class="ocr_word" title="bbox 84 1937 215 2000" lang="grc">
+        <span id="w_183_0" class="ocr_word" title="bbox 84 1937 215 2000">
           <span class="alternatives">
-            <ins title="nlp 2.00">(πῶς</ins>
+            <ins class="alt" title="nlp 2.00">(πῶς</ins>
+          </span>
+        </span>
+        <span id="w_183_1" class="ocr_word" title="bbox 84 1937 215 2000">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_184" class="ocr_word" title="bbox 241 1936 352 2002" lang="grc">
@@ -983,11 +988,6 @@
         <span id="w_190" class="ocr_word" title="bbox 1401 1954 1487 2001" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τῆς</ins>
-          </span>
-        </span>
-        <span id="w_191" class="ocr_word" title="bbox 1516 1936 1776 2000" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">μετανοίας</ins>
           </span>
         </span>
       </span>
