--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0400.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0400.html
@@ -12,7 +12,7 @@
       <span class="ocr_line" title="bbox 201 174 1330 233">
         <span id="w_0" class="ocr_word" title="bbox 201 180 302 233" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">Μ</ins>
+            <ins title="nlp 2.00">104</ins>
           </span>
         </span>
         <span id="w_1" class="ocr_word" title="bbox 745 174 960 219">
