--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0198.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0198.html
@@ -1327,9 +1327,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 328 2662 1916 2741">
-        <span id="w_264" class="ocr_word" title="bbox 328 2677 352 2714" lang="grc">
+        <span id="w_264_0" class="ocr_word" title="bbox 328 2677 352 2714">
           <span class="alternatives">
-            <ins title="nlp 2.00">Σωσκοῦ</ins>
+            <ins class="alt" title="nlp 2.00">3</ins>
+          </span>
+        </span>
+        <span id="w_264_1" class="ocr_word" title="bbox 328 2677 352 2714">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">Σωσκοῦ</ins>
           </span>
         </span>
         <span id="w_265" class="ocr_word" title="bbox 709 2682 736 2719">
