--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0354.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0354.html
@@ -452,11 +452,6 @@
             <ins class="alt" title="nlp 2.00">αὐτοκράτωρ</ins>
           </span>
         </span>
-        <span id="w_84_1" class="ocr_word" title="bbox 208 1080 523 1151">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
-          </span>
-        </span>
         <span id="w_85" class="ocr_word" title="bbox 587 1082 673 1142" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τὰς</ins>
@@ -823,11 +818,6 @@
             <ins class="alt" title="nlp 2.00">Ἀδριαντικοῦ</ins>
           </span>
         </span>
-        <span id="w_156_1" class="ocr_word" title="bbox 423 1702 768 1771">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
-          </span>
-        </span>
         <span id="w_157" class="ocr_word" title="bbox 807 1703 1051 1773" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">πελάγους</ins>
@@ -947,11 +937,6 @@
         <span id="w_180_0" class="ocr_word" title="bbox 434 1939 723 2004">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00">κλύδωνας,</ins>
-          </span>
-        </span>
-        <span id="w_180_1" class="ocr_word" title="bbox 434 1939 723 2004">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_181" class="ocr_word" title="bbox 772 1958 863 1999" lang="grc">
@@ -1177,11 +1162,6 @@
         <span id="w_225_0" class="ocr_word" title="bbox 205 2328 455 2393">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00">ἀκαδημία</ins>
-          </span>
-        </span>
-        <span id="w_225_1" class="ocr_word" title="bbox 205 2328 455 2393">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_226" class="ocr_word" title="bbox 513 2347 582 2390" lang="grc">
@@ -1446,9 +1426,14 @@
             <ins class="alt" title="nlp 1.00">10</ins>
           </span>
         </span>
-        <span id="w_277" class="ocr_word" title="bbox 401 2827 739 2884" lang="grc">
+        <span id="w_277_0" class="ocr_word" title="bbox 401 2827 739 2884">
           <span class="alternatives">
-            <ins title="nlp 2.00">κυβερνίτης F</ins>
+            <ins class="alt" title="nlp 2.00">κυβερνίτης</ins>
+          </span>
+        </span>
+        <span id="w_277_1" class="ocr_word" title="bbox 401 2827 739 2884">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">F</ins>
           </span>
         </span>
         <span id="w_278" class="ocr_word" title="bbox 838 2833 890 2873">
