--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0168.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0168.html
@@ -566,7 +566,7 @@
         </span>
         <span id="w_112_0" class="ocr_word" title="bbox 1337 1160 1669 1230">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">(βεστιαρίτας</ins>
+            <ins class="alt" title="nlp 2.00">βεστιαρίτας</ins>
           </span>
         </span>
         <span id="w_112_1" class="ocr_word" title="bbox 1337 1160 1669 1230">
