--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0355.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0355.html
@@ -235,9 +235,9 @@
             <ins class="alt" title="nlp 2.00">συγγραμμάτων</ins>
           </span>
         </span>
-        <span id="w_44_0_1" class="ocr_word" title="bbox 1579 626 1828 679">
+        <span id="w_44_0_1_0" class="ocr_word" title="bbox 1579 626 1828 679">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
+            <ins class="alt" title="nlp 2.00">5</ins>
           </span>
         </span>
       </span>
@@ -408,9 +408,14 @@
             <ins class="alt" title="nlp 1.00">πόλιν</ins>
           </span>
         </span>
-        <span id="w_79" class="ocr_word" title="bbox 1508 943 1599 973" lang="grc">
+        <span id="w_79_0" class="ocr_word" title="bbox 1508 943 1599 973">
           <span class="alternatives">
-            <ins title="nlp 2.00">κατ᾿ οἴκους</ins>
+            <ins class="alt" title="nlp 2.00">κατ’</ins>
+          </span>
+        </span>
+        <span id="w_79_1" class="ocr_word" title="bbox 1508 943 1599 973">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">οἴκους</ins>
           </span>
         </span>
       </span>
