--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0414.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0414.html
@@ -1179,11 +1179,6 @@
             <ins class="alt" title="nlp 2.00">Πετζέαν</ins>
           </span>
         </span>
-        <span id="w_231_1" class="ocr_word" title="bbox 318 2317 536 2378">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
-          </span>
-        </span>
         <span id="w_232" class="ocr_word" title="bbox 583 2319 740 2367" lang="grc">
           <span class="alternatives">
             <ins title="nlp 2.00">δοῦκα</ins>
@@ -1206,7 +1201,7 @@
         </span>
         <span id="w_236" class="ocr_word" title="bbox 1405 2317 1691 2367" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">καταλιπὼν</ins>
+            <ins title="nlp 2.00">καταλιπὼν αὐτὸς</ins>
           </span>
         </span>
       </span>
