--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0138.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0138.html
@@ -188,9 +188,9 @@
             <ins class="alt" title="nlp 2.00">ἀποβλέπουσαν.</ins>
           </span>
         </span>
-        <span id="w_34_1" class="ocr_word" title="bbox 1601 542 1905 611">
+        <span id="w_34_1_0" class="ocr_word" title="bbox 1601 542 1905 611">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
+            <ins class="alt" title="nlp 2.00">C</ins>
           </span>
         </span>
       </span>
@@ -1553,11 +1553,6 @@
             <ins class="alt" title="nlp 2.00">ἠν</ins>
           </span>
         </span>
-        <span id="w_304_1" class="ocr_word" title="bbox 308 2902 369 2942">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
-          </span>
-        </span>
         <span id="w_305" class="ocr_word" title="bbox 402 2902 454 2942" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">γε</ins>
@@ -1593,9 +1588,14 @@
             <ins class="alt" title="nlp 1.00">τὸν]</ins>
           </span>
         </span>
-        <span id="w_312" class="ocr_word" title="bbox 1596 2905 1743 2934" lang="grc">
+        <span id="w_312_0" class="ocr_word" title="bbox 1596 2905 1743 2934">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">κατόν</ins>
+            <ins class="alt" title="nlp 2.00">κατὸν</ins>
+          </span>
+        </span>
+        <span id="w_312_1" class="ocr_word" title="bbox 1596 2905 1743 2934">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">F</ins>
           </span>
         </span>
       </span>
