--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0199.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0199.html
@@ -1217,9 +1217,9 @@
             <ins class="alt" title="nlp 1.00">τὰ</ins>
           </span>
         </span>
-        <span id="w_234" class="ocr_word" title="bbox 1581 2375 1810 2441" lang="grc">
+        <span id="w_234_0" class="ocr_word" title="bbox 1581 2375 1810 2441">
           <span class="alternatives">
-            <ins title="nlp 2.00">ὀβρίκαλα.</ins>
+            <ins class="alt" title="nlp 2.00">Τρίκαλα.</ins>
           </span>
         </span>
       </span>
@@ -1484,9 +1484,14 @@
             <ins title="nlp 2.00">sive</ins>
           </span>
         </span>
-        <span id="w_285" class="ocr_word" title="bbox 733 2852 963 2895">
+        <span id="w_285_0" class="ocr_word" title="bbox 733 2852 963 2895">
           <span class="alternatives">
-            <ins title="nlp 2.00">᾿ </ins>
+            <ins class="alt" title="nlp 2.00">Peneus?’</ins>
+          </span>
+        </span>
+        <span id="w_285_1" class="ocr_word" title="bbox 733 2852 963 2895">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_286" class="ocr_word" title="bbox 988 2867 1007 2896">
@@ -1502,11 +1507,6 @@
         <span id="w_288" class="ocr_word" title="bbox 1208 2869 1243 2895">
           <span class="alternatives">
             <ins title="nlp 2.00">ὠ</ins>
-          </span>
-        </span>
-        <span id="w_289" class="ocr_word" title="bbox 1275 2850 1474 2909" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">βασιλεῦ</ins>
           </span>
         </span>
       </span>
