--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0169.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0169.html
@@ -703,12 +703,12 @@
         </span>
         <span id="w_135_0" class="ocr_word" title="bbox 1708 1418 1798 1448">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">κα-</ins>
+            <ins title="nlp 2.00">καταστήσας</ins>
           </span>
         </span>
         <span id="w_135_1" class="ocr_word" title="bbox 1708 1418 1798 1448">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
+            <ins title="nlp 2.00">15</ins>
           </span>
         </span>
       </span>
@@ -716,11 +716,6 @@
         <span id="w_137" class="ocr_word" title="bbox 44 1490 77 1523">
           <span class="alternatives">
             <ins title="nlp 2.00">D</ins>
-          </span>
-        </span>
-        <span id="w_139_0" class="ocr_word" title="bbox 381 1470 448 1521">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">ταστήσας</ins>
           </span>
         </span>
         <span id="w_139_1" class="ocr_word" title="bbox 381 1470 448 1521">
