--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0357.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0357.html
@@ -529,9 +529,9 @@
             <ins class="alt" title="nlp 2.00">Μελισσηνὸν</ins>
           </span>
         </span>
-        <span id="w_101_1" class="ocr_word" title="bbox 1403 1136 1725 1196">
+        <span id="w_101_1_0" class="ocr_word" title="bbox 1403 1136 1725 1196">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
+            <ins class="alt" title="nlp 2.00">καὶ</ins>
           </span>
         </span>
       </span>
@@ -882,12 +882,12 @@
             <ins class="alt" title="nlp 1.00">καταλαβών</ins>
           </span>
         </span>
-        <span id="w_170_0" class="ocr_word" title="bbox 721 1835 1001 1902">
+        <span id="w_170_0_0" class="ocr_word" title="bbox 721 1835 1001 1902">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">(κλείσουρα</ins>
+            <ins class="alt" title="nlp 2.00">(κλείσουρα</ins>
           </span>
         </span>
-        <span id="w_170_1" class="ocr_word" title="bbox 721 1835 1001 1902">
+        <span id="w_170_0_1" class="ocr_word" title="bbox 721 1835 1001 1902">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00"/>
           </span>
@@ -905,11 +905,6 @@
         <span id="w_173" class="ocr_word" title="bbox 1284 1835 1452 1902" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">Ζυγοῦ</ins>
-          </span>
-        </span>
-        <span id="w_174" class="ocr_word" title="bbox 1498 1834 1687 1885" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">οὑτωσί</ins>
           </span>
         </span>
       </span>
