--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0139.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0139.html
@@ -597,9 +597,9 @@
             <ins class="alt" title="nlp 2.00">αὕτη,</ins>
           </span>
         </span>
-        <span id="w_112_1" class="ocr_word" title="bbox 1410 1254 1565 1299">
+        <span id="w_112_1_0" class="ocr_word" title="bbox 1410 1254 1565 1299">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
+            <ins class="alt" title="nlp 2.00">πάγιον</ins>
           </span>
         </span>
       </span>
