--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0358.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0358.html
@@ -964,19 +964,19 @@
             <ins title="nlp 2.00">Μοναστρᾶν</ins>
           </span>
         </span>
-        <span id="w_187" class="ocr_word" title="bbox 1242 1923 1628 1992" lang="grc">
+        <span id="w_187_0" class="ocr_word" title="bbox 1242 1923 1628 1992">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">(μιξοβάρβαρος</ins>
+            <ins class="alt" title="nlp 2.00">(μιξοβάρβαρος</ins>
+          </span>
+        </span>
+        <span id="w_187_1" class="ocr_word" title="bbox 1242 1923 1628 1992">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_188" class="ocr_word" title="bbox 1655 1924 1710 1973" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">δὲ</ins>
-          </span>
-        </span>
-        <span id="w_189" class="ocr_word" title="bbox 1739 1923 1884 1980" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">οὗτος</ins>
           </span>
         </span>
       </span>
