--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0360.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0360.html
@@ -272,19 +272,19 @@
             <ins class="alt" title="nlp 2.00">ἀκούσει,</ins>
           </span>
         </span>
-        <span id="w_50_1" class="ocr_word" title="bbox 1305 673 1533 742">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
-          </span>
-        </span>
         <span id="w_51" class="ocr_word" title="bbox 1586 676 1789 741" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἀνοίξας</ins>
           </span>
         </span>
-        <span id="w_52" class="ocr_word" title="bbox 1826 698 1911 739" lang="grc">
+        <span id="w_52_0" class="ocr_word" title="bbox 1826 698 1911 739">
           <span class="alternatives">
-            <ins title="nlp 2.00">τὰς D</ins>
+            <ins class="alt" title="nlp 2.00">τὰς</ins>
+          </span>
+        </span>
+        <span id="w_52_1" class="ocr_word" title="bbox 1826 698 1911 739">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">D</ins>
           </span>
         </span>
       </span>
@@ -1194,12 +1194,12 @@
             <ins class="alt" title="nlp 1.00">συγκροτουμένων</ins>
           </span>
         </span>
-        <span id="w_231_0" class="ocr_word" title="bbox 1216 2313 1323 2372">
+        <span id="w_231_0_0" class="ocr_word" title="bbox 1216 2313 1323 2372">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00">(καὶ</ins>
           </span>
         </span>
-        <span id="w_231_1" class="ocr_word" title="bbox 1216 2313 1323 2372">
+        <span id="w_231_0_1" class="ocr_word" title="bbox 1216 2313 1323 2372">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00"/>
           </span>
@@ -1212,11 +1212,6 @@
         <span id="w_233" class="ocr_word" title="bbox 1491 2315 1541 2364" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">οἱ</ins>
-          </span>
-        </span>
-        <span id="w_234" class="ocr_word" title="bbox 1573 2314 1800 2382" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">νεώτεροι</ins>
           </span>
         </span>
       </span>
