--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0140.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0140.html
@@ -1061,11 +1061,6 @@
             <ins class="alt" title="nlp 2.00">διαδεχθήσονται,</ins>
           </span>
         </span>
-        <span id="w_204_1" class="ocr_word" title="bbox 587 2013 1029 2078">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
-          </span>
-        </span>
         <span id="w_205" class="ocr_word" title="bbox 1080 2013 1445 2077" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τιμηθήσονται</ins>
@@ -1081,9 +1076,14 @@
             <ins class="alt" title="nlp 1.00">καὶ</ins>
           </span>
         </span>
-        <span id="w_208" class="ocr_word" title="bbox 1694 2034 1749 2065" lang="grc">
+        <span id="w_208_0" class="ocr_word" title="bbox 1694 2034 1749 2065">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἐν</ins>
+            <ins class="alt" title="nlp 2.00">ἐν</ins>
+          </span>
+        </span>
+        <span id="w_208_1" class="ocr_word" title="bbox 1694 2034 1749 2065">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">μεγίστοις</ins>
           </span>
         </span>
       </span>
