--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0361.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0361.html
@@ -299,9 +299,14 @@
             <ins class="alt" title="nlp 1.00">τῶν</ins>
           </span>
         </span>
-        <span id="w_56" class="ocr_word" title="bbox 1132 777 1203 808" lang="grc">
+        <span id="w_56_0" class="ocr_word" title="bbox 1132 777 1203 808">
           <span class="alternatives">
-            <ins title="nlp 2.00">ὑπ᾿ αὐτὸν</ins>
+            <ins class="alt" title="nlp 2.00">ὑπ’</ins>
+          </span>
+        </span>
+        <span id="w_56_1" class="ocr_word" title="bbox 1132 777 1203 808">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">αὐτὸν</ins>
           </span>
         </span>
         <span id="w_57" class="ocr_word" title="bbox 1459 778 1690 824" lang="grc">
@@ -329,11 +334,6 @@
         <span id="w_61_0" class="ocr_word" title="bbox 454 832 563 899">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00">μετ᾿</ins>
-          </span>
-        </span>
-        <span id="w_61_1" class="ocr_word" title="bbox 454 832 563 899">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_62" class="ocr_word" title="bbox 604 836 773 885" lang="grc">
@@ -907,11 +907,6 @@
             <ins class="alt" title="nlp 2.00">εἴκασεν</ins>
           </span>
         </span>
-        <span id="w_172_1" class="ocr_word" title="bbox 108 1848 308 1898">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
-          </span>
-        </span>
         <span id="w_173" class="ocr_word" title="bbox 354 1851 483 1898" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">εἶναι,</ins>
@@ -1114,7 +1109,7 @@
       <span class="ocr_line" title="bbox 111 2231 1807 2303">
         <span id="w_214" class="ocr_word" title="bbox 318 2237 395 2300" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">(ἐν</ins>
+            <ins title="nlp 2.00">ἐν</ins>
           </span>
         </span>
         <span id="w_215" class="ocr_word" title="bbox 435 2238 604 2287" lang="grc">
@@ -1258,9 +1253,14 @@
             <ins title="nlp 2.00">Ῥωμαίων</ins>
           </span>
         </span>
-        <span id="w_243" class="ocr_word" title="bbox 1306 2467 1547 2534" lang="grc">
+        <span id="w_243_0" class="ocr_word" title="bbox 1306 2467 1547 2534">
           <span class="alternatives">
-            <ins title="nlp 2.00">γενναίως ἀγωνιζό-</ins>
+            <ins class="alt" title="nlp 2.00">γενναίως</ins>
+          </span>
+        </span>
+        <span id="w_243_1" class="ocr_word" title="bbox 1306 2467 1547 2534">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">ἀγωνιζόμενοι</ins>
           </span>
         </span>
       </span>
@@ -1361,7 +1361,7 @@
         </span>
         <span id="w_265" class="ocr_word" title="bbox 930 2700 1150 2769" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">(ἡγεμὼν</ins>
+            <ins title="nlp 2.00">ἡγεμὼν</ins>
           </span>
         </span>
         <span id="w_266" class="ocr_word" title="bbox 1186 2702 1241 2750" lang="grc">
