--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0363.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0363.html
@@ -223,9 +223,9 @@
             <ins class="alt" title="nlp 1.00">τοῦ</ins>
           </span>
         </span>
-        <span id="w_41_0" class="ocr_word" title="bbox 1566 539 1814 606">
+        <span id="w_41_0_0" class="ocr_word" title="bbox 1566 539 1814 606">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">αὐτοκρά-</ins>
+            <ins class="alt" title="nlp 2.00">αὐτοκράτορος</ins>
           </span>
         </span>
       </span>
@@ -233,11 +233,6 @@
         <span id="w_42_0" class="ocr_word" title="bbox 63 634 95 667">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00">B</ins>
-          </span>
-        </span>
-        <span id="w_42_1" class="ocr_word" title="bbox 63 634 95 667">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">τορος</ins>
           </span>
         </span>
         <span id="w_44" class="ocr_word" title="bbox 300 611 570 672" lang="grc">
@@ -633,9 +628,14 @@
             <ins title="nlp 2.00">αὐτοῦ”</ins>
           </span>
         </span>
-        <span id="w_120" class="ocr_word" title="bbox 680 1317 859 1382" lang="grc">
+        <span id="w_120_0" class="ocr_word" title="bbox 680 1317 859 1382">
           <span class="alternatives">
-            <ins title="nlp 2.00">(ἐκεῖσε</ins>
+            <ins class="alt" title="nlp 2.00">(ἐκεῖσε</ins>
+          </span>
+        </span>
+        <span id="w_120_1" class="ocr_word" title="bbox 680 1317 859 1382">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_121" class="ocr_word" title="bbox 896 1314 988 1383" lang="grc">
@@ -656,11 +656,6 @@
         <span id="w_124" class="ocr_word" title="bbox 1333 1316 1493 1376" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">καλῶς</ins>
-          </span>
-        </span>
-        <span id="w_125" class="ocr_word" title="bbox 1521 1313 1814 1380" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἐστοχάσατο</ins>
           </span>
         </span>
       </span>
