--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0364.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0364.html
@@ -297,9 +297,9 @@
             <ins class="alt" title="nlp 2.00">P.</ins>
           </span>
         </span>
-        <span id="w_57_1" class="ocr_word" title="bbox 1919 721 1959 753">
+        <span id="w_57_1_0" class="ocr_word" title="bbox 1919 721 1959 753">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
+            <ins class="alt" title="nlp 2.00">2</ins>
           </span>
         </span>
       </span>
