--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0365.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0365.html
@@ -114,9 +114,9 @@
             <ins class="alt" title="nlp 1.00">τὴν</ins>
           </span>
         </span>
-        <span id="w_20_0" class="ocr_word" title="bbox 1748 377 1833 421">
+        <span id="w_20_0_0" class="ocr_word" title="bbox 1748 377 1833 421">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">με-</ins>
+            <ins class="alt" title="nlp 2.00">μεγαλόπλιν.</ins>
           </span>
         </span>
       </span>
@@ -124,11 +124,6 @@
         <span id="w_21_0" class="ocr_word" title="bbox 82 454 117 486">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00">D</ins>
-          </span>
-        </span>
-        <span id="w_21_1" class="ocr_word" title="bbox 82 454 117 486">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">γαλόπολιν.</ins>
           </span>
         </span>
         <span id="w_23" class="ocr_word" title="bbox 482 429 507 481" lang="grc">
@@ -1107,9 +1102,9 @@
             <ins class="alt" title="nlp 1.00">καὶ</ins>
           </span>
         </span>
-        <span id="w_217_0" class="ocr_word" title="bbox 1750 2238 1832 2284">
+        <span id="w_217_0_0" class="ocr_word" title="bbox 1750 2238 1832 2284">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">μο-</ins>
+            <ins class="alt" title="nlp 2.00">μονονοὺ</ins>
           </span>
         </span>
       </span>
@@ -1117,11 +1112,6 @@
         <span id="w_218_0" class="ocr_word" title="bbox 81 2320 112 2353">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00">B</ins>
-          </span>
-        </span>
-        <span id="w_218_1" class="ocr_word" title="bbox 81 2320 112 2353">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">νονοὺ</ins>
           </span>
         </span>
         <span id="w_220" class="ocr_word" title="bbox 327 2320 410 2350" lang="grc">
