--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0415.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0415.html
@@ -638,7 +638,7 @@
         </span>
         <span id="w_121_1" class="ocr_word" title="bbox 1596 1350 1826 1419">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
+            <ins title="nlp 2.00">15</ins>
           </span>
         </span>
       </span>
@@ -1224,12 +1224,12 @@
             <ins class="alt" title="nlp 1.00">ἤδη</ins>
           </span>
         </span>
-        <span id="w_241_0" class="ocr_word" title="bbox 1364 2435 1465 2499">
+        <span id="w_241_0_0" class="ocr_word" title="bbox 1364 2435 1465 2499">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00">(καὶ</ins>
           </span>
         </span>
-        <span id="w_241_1" class="ocr_word" title="bbox 1364 2435 1465 2499">
+        <span id="w_241_0_1" class="ocr_word" title="bbox 1364 2435 1465 2499">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00"/>
           </span>
@@ -1237,11 +1237,6 @@
         <span id="w_242" class="ocr_word" title="bbox 1518 2455 1611 2501" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">γὰρ</ins>
-          </span>
-        </span>
-        <span id="w_243" class="ocr_word" title="bbox 1664 2433 1689 2485" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ὁ</ins>
           </span>
         </span>
       </span>
