--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0368.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0368.html
@@ -94,9 +94,14 @@
             <ins class="alt" title="nlp 1.00">καὶ</ins>
           </span>
         </span>
-        <span id="w_16" class="ocr_word" title="bbox 1226 384 1311 429" lang="grc">
+        <span id="w_16_0" class="ocr_word" title="bbox 1226 384 1311 429">
           <span class="alternatives">
-            <ins title="nlp 2.00">μετ᾿ εὐφροσύνης</ins>
+            <ins class="alt" title="nlp 2.00">μετ’</ins>
+          </span>
+        </span>
+        <span id="w_16_1" class="ocr_word" title="bbox 1226 384 1311 429">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">εὐφροσύνης</ins>
           </span>
         </span>
         <span id="w_17" class="ocr_word" title="bbox 1704 361 1867 414" lang="grc">
