--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0369.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0369.html
@@ -1192,14 +1192,14 @@
             <ins class="alt" title="nlp 1.00">ἀπείρων</ins>
           </span>
         </span>
-        <span id="w_234" class="ocr_word" title="bbox 1332 2229 1631 2292" lang="grc">
+        <span id="w_234_0" class="ocr_word" title="bbox 1332 2229 1631 2292">
           <span class="alternatives">
-            <ins title="nlp 2.00">φραγγικῶν</ins>
+            <ins class="alt" title="nlp 2.00">Φραγγικῶν</ins>
           </span>
         </span>
-        <span id="w_235" class="ocr_word" title="bbox 1669 2240 1811 2291" lang="grc">
+        <span id="w_234_1" class="ocr_word" title="bbox 1332 2229 1631 2292">
           <span class="alternatives">
-            <ins title="nlp 2.00">στρατευμάτων</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
