--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0416.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0416.html
@@ -1392,11 +1392,6 @@
             <ins class="alt" title="nlp 2.00">Κωνσταντίνου</ins>
           </span>
         </span>
-        <span id="w_276_1" class="ocr_word" title="bbox 201 2592 584 2642">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
-          </span>
-        </span>
         <span id="w_277" class="ocr_word" title="bbox 638 2591 1033 2655" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">προσαπολέσειε.</ins>
@@ -1414,16 +1409,11 @@
         </span>
         <span id="w_280" class="ocr_word" title="bbox 1539 2613 1605 2659" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">μὴ</ins>
+            <ins title="nlp 2.00">μὴ ἐπικαταλαμβανόντων</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 201 2666 1893 2735">
-        <span id="w_282" class="ocr_word" title="bbox 201 2668 559 2734" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">λαμβανόντων</ins>
-          </span>
-        </span>
         <span id="w_283" class="ocr_word" title="bbox 617 2668 770 2718" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">αὐτὸν</ins>
