--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0601.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0601.html
@@ -1124,9 +1124,9 @@
             <ins class="alt" title="nlp 1.00">σπαργάνων</ins>
           </span>
         </span>
-        <span id="w_220" class="ocr_word" title="bbox 1651 2069 1852 2115" lang="grc">
+        <span id="w_220_0" class="ocr_word" title="bbox 1651 2069 1852 2115">
           <span class="alternatives">
-            <ins title="nlp 2.00">γεγενη-</ins>
+            <ins class="alt" title="nlp 2.00">γεγενημένη</ins>
           </span>
         </span>
       </span>
@@ -1139,11 +1139,6 @@
         <span id="w_222" class="ocr_word" title="bbox 80 2151 142 2184">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">392</ins>
-          </span>
-        </span>
-        <span id="w_223" class="ocr_word" title="bbox 164 2151 286 2197" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">μένη</ins>
           </span>
         </span>
         <span id="w_224" class="ocr_word" title="bbox 332 2126 552 2197" lang="grc">
