--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0417.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0417.html
@@ -677,7 +677,7 @@
         </span>
         <span id="w_132_1" class="ocr_word" title="bbox 1545 1354 1805 1416">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
+            <ins title="nlp 2.00">15</ins>
           </span>
         </span>
       </span>
