--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0374.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0374.html
@@ -245,9 +245,9 @@
             <ins class="alt" title="nlp 1.00">πρὸς</ins>
           </span>
         </span>
-        <span id="w_48" class="ocr_word" title="bbox 1921 632 1959 666">
+        <span id="w_48_0" class="ocr_word" title="bbox 1921 632 1959 666">
           <span class="alternatives">
-            <ins title="nlp 2.00">p.</ins>
+            <ins class="alt" title="nlp 2.00">P.</ins>
           </span>
         </span>
       </span>
@@ -1421,9 +1421,14 @@
             <ins class="alt" title="nlp 1.00">3</ins>
           </span>
         </span>
-        <span id="w_279" class="ocr_word" title="bbox 360 2877 583 2922">
+        <span id="w_279_0" class="ocr_word" title="bbox 360 2877 583 2922">
           <span class="alternatives">
-            <ins title="nlp 2.00">lacunam</ins>
+            <ins class="alt" title="nlp 2.00">lac</ins>
+          </span>
+        </span>
+        <span id="w_279_1" class="ocr_word" title="bbox 360 2877 583 2922">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">unam</ins>
           </span>
         </span>
         <span id="w_280" class="ocr_word" title="bbox 617 2878 799 2935">
