--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0603.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0603.html
@@ -189,11 +189,6 @@
             <ins class="alt" title="nlp 2.00">μοι,</ins>
           </span>
         </span>
-        <span id="w_34_1" class="ocr_word" title="bbox 968 552 1077 600">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
-          </span>
-        </span>
         <span id="w_35" class="ocr_word" title="bbox 1136 535 1219 585" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">καὶ</ins>
@@ -204,9 +199,14 @@
             <ins class="alt" title="nlp 1.00">διακοπτόμενον</ins>
           </span>
         </span>
-        <span id="w_37" class="ocr_word" title="bbox 1692 559 1747 588" lang="grc">
+        <span id="w_37_0" class="ocr_word" title="bbox 1692 559 1747 588">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἐν</ins>
+            <ins class="alt" title="nlp 2.00">ἐν</ins>
+          </span>
+        </span>
+        <span id="w_37_1" class="ocr_word" title="bbox 1692 559 1747 588">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">τῷ</ins>
           </span>
         </span>
       </span>
@@ -956,14 +956,14 @@
             <ins class="alt" title="nlp 1.00">καὶ</ins>
           </span>
         </span>
-        <span id="w_187" class="ocr_word" title="bbox 1496 1788 1848 1836" lang="grc">
+        <span id="w_187_0" class="ocr_word" title="bbox 1496 1788 1848 1836">
           <span class="alternatives">
-            <ins title="nlp 2.00">προκαταρκτι-</ins>
+            <ins class="alt" title="nlp 2.00">ποκαταρκτικὸν</ins>
           </span>
         </span>
-        <span id="w_188" class="ocr_word" title="bbox 1872 1795 1914 1827">
+        <span id="w_187_1" class="ocr_word" title="bbox 1496 1788 1848 1836">
           <span class="alternatives">
-            <ins title="nlp 2.00">20</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -971,11 +971,6 @@
         <span id="w_189" class="ocr_word" title="bbox 115 1867 145 1899">
           <span class="alternatives">
             <ins title="nlp 2.00">Β</ins>
-          </span>
-        </span>
-        <span id="w_190" class="ocr_word" title="bbox 169 1839 259 1895" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">κὸν</ins>
           </span>
         </span>
         <span id="w_191" class="ocr_word" title="bbox 295 1865 458 1896" lang="grc">
