--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0419.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0419.html
@@ -1350,9 +1350,9 @@
             <ins title="nlp 2.00">αὐτῶν</ins>
           </span>
         </span>
-        <span id="w_260" class="ocr_word" title="bbox 1703 2675 1778 2734" lang="grc">
+        <span id="w_260_0" class="ocr_word" title="bbox 1703 2675 1778 2734">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἐξ-</ins>
+            <ins class="alt" title="nlp 2.00">ἐξπαραπορήσαντες</ins>
           </span>
         </span>
       </span>
@@ -1360,11 +1360,6 @@
         <span id="w_261" class="ocr_word" title="bbox 202 2793 226 2830">
           <span class="alternatives">
             <ins title="nlp 2.00">2</ins>
-          </span>
-        </span>
-        <span id="w_262" class="ocr_word" title="bbox 259 2802 688 2843" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">παραπορήσαντες</ins>
           </span>
         </span>
         <span id="w_263" class="ocr_word" title="bbox 710 2787 750 2830">
