--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0376.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0376.html
@@ -234,7 +234,7 @@
       <span class="ocr_line" title="bbox 201 676 1896 751">
         <span id="w_43" class="ocr_word" title="bbox 201 683 575 751" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">\Λογγιβαρδίας</ins>
+            <ins title="nlp 2.00">Λογγιβαρδίας</ins>
           </span>
         </span>
         <span id="w_44" class="ocr_word" title="bbox 621 676 647 731" lang="grc">
@@ -603,14 +603,14 @@
             <ins class="alt" title="nlp 1.00">τοῦ</ins>
           </span>
         </span>
-        <span id="w_118" class="ocr_word" title="bbox 1207 1308 1495 1372" lang="grc">
+        <span id="w_118_0" class="ocr_word" title="bbox 1207 1308 1495 1372">
           <span class="alternatives">
-            <ins title="nlp 2.00">φραγγικοῦ</ins>
+            <ins class="alt" title="nlp 2.00">Φραγγικοῦ</ins>
           </span>
         </span>
-        <span id="w_119" class="ocr_word" title="bbox 1542 1301 1900 1370" lang="grc">
+        <span id="w_118_1" class="ocr_word" title="bbox 1207 1308 1495 1372">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">στρατεύματος</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
