--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0377.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0377.html
@@ -62,18 +62,13 @@
             <ins class="alt" title="nlp 1.00">χρησταῖς</ins>
           </span>
         </span>
-        <span id="w_10" class="ocr_word" title="bbox 1673 328 1794 360" lang="grc">
+        <span id="w_10_0" class="ocr_word" title="bbox 1673 328 1794 360">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ὑπο-</ins>
+            <ins class="alt" title="nlp 2.00">ὑποσχέσεσι</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 104 381 1792 453">
-        <span id="w_11" class="ocr_word" title="bbox 104 399 293 451" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">σχέσεσι</ins>
-          </span>
-        </span>
         <span id="w_12" class="ocr_word" title="bbox 346 385 589 450" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τράπεζαν</ins>
@@ -203,18 +198,13 @@
             <ins class="alt" title="nlp 1.00">δηλώσας</ins>
           </span>
         </span>
-        <span id="w_37" class="ocr_word" title="bbox 1651 560 1794 607" lang="grc">
+        <span id="w_37_0" class="ocr_word" title="bbox 1651 560 1794 607">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἐκαρ-</ins>
+            <ins class="alt" title="nlp 2.00">ἐκαρτἐρεο</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 103 617 1836 684">
-        <span id="w_38" class="ocr_word" title="bbox 103 618 226 684" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τέρει</ins>
-          </span>
-        </span>
         <span id="w_39" class="ocr_word" title="bbox 262 637 315 666" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τὸ</ins>
@@ -1409,14 +1399,19 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 109 2711 1800 2785">
-        <span id="w_270" class="ocr_word" title="bbox 492 2740 577 2770" lang="grc">
+        <span id="w_270_0" class="ocr_word" title="bbox 492 2740 577 2770">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἀλλὰ τὸν</ins>
+            <ins class="alt" title="nlp 2.00">ἀλλὰ</ins>
+          </span>
+        </span>
+        <span id="w_270_1" class="ocr_word" title="bbox 492 2740 577 2770">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">τὸν</ins>
           </span>
         </span>
         <span id="w_271" class="ocr_word" title="bbox 615 2717 889 2785" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">'Ρωμαϊκὸν</ins>
+            <ins title="nlp 2.00">Ρωμαϊκὸν</ins>
           </span>
         </span>
         <span id="w_272" class="ocr_word" title="bbox 941 2715 1263 2783" lang="grc">
