--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0604.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0604.html
@@ -663,14 +663,14 @@
             <ins class="alt" title="nlp 2.00">ἐδίδοτο,</ins>
           </span>
         </span>
-        <span id="w_131_1" class="ocr_word" title="bbox 1105 1306 1320 1371">
+        <span id="w_132_0" class="ocr_word" title="bbox 1370 1306 1491 1373">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
+            <ins class="alt" title="nlp 2.00">πρὸς</ins>
           </span>
         </span>
-        <span id="w_132" class="ocr_word" title="bbox 1370 1306 1491 1373" lang="grc">
+        <span id="w_132_1" class="ocr_word" title="bbox 1370 1306 1491 1373">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">πρὸς</ins>
+            <ins class="alt" title="nlp 2.00">φλεβοτομίαν</ins>
           </span>
         </span>
       </span>
