--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0379.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0379.html
@@ -1563,9 +1563,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 117 2864 1184 2921">
-        <span id="w_302" class="ocr_word" title="bbox 117 2869 348 2914">
+        <span id="w_302_0" class="ocr_word" title="bbox 117 2869 348 2914">
           <span class="alternatives">
-            <ins title="nlp 2.00">MIllerus:</ins>
+            <ins class="alt" title="nlp 2.00">Millerus</ins>
+          </span>
+        </span>
+        <span id="w_302_1" class="ocr_word" title="bbox 117 2869 348 2914">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">:</ins>
           </span>
         </span>
         <span id="w_303" class="ocr_word" title="bbox 386 2871 666 2914" lang="grc">
