--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0605.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0605.html
@@ -528,9 +528,9 @@
             <ins class="alt" title="nlp 1.00">ἀνίει</ins>
           </span>
         </span>
-        <span id="w_101" class="ocr_word" title="bbox 1659 1098 1870 1162" lang="grc">
+        <span id="w_101_0" class="ocr_word" title="bbox 1659 1098 1870 1162">
           <span class="alternatives">
-            <ins title="nlp 2.00">συμπνί-</ins>
+            <ins class="alt" title="nlp 2.00">συμπνίγουσα.</ins>
           </span>
         </span>
       </span>
@@ -538,11 +538,6 @@
         <span id="w_102" class="ocr_word" title="bbox 130 1188 163 1219">
           <span class="alternatives">
             <ins title="nlp 2.00">D</ins>
-          </span>
-        </span>
-        <span id="w_103" class="ocr_word" title="bbox 186 1185 356 1236" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">γουσα.</ins>
           </span>
         </span>
         <span id="w_104" class="ocr_word" title="bbox 418 1172 664 1236" lang="grc">
