--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0420.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0420.html
@@ -1023,16 +1023,11 @@
         </span>
         <span id="w_196_1" class="ocr_word" title="bbox 1770 1996 1928 2044">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
+            <ins title="nlp 2.00">D</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 238 2070 1930 2137">
-        <span id="w_198" class="ocr_word" title="bbox 238 2093 340 2122" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">νων</ins>
-          </span>
-        </span>
         <span id="w_199" class="ocr_word" title="bbox 385 2091 541 2136" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἧτταν</ins>
