--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0380.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0380.html
@@ -1282,9 +1282,9 @@
             <ins class="alt" title="nlp 1.00">καὶ</ins>
           </span>
         </span>
-        <span id="w_246" class="ocr_word" title="bbox 1953 2280 1980 2315">
+        <span id="w_246_0" class="ocr_word" title="bbox 1953 2280 1980 2315">
           <span class="alternatives">
-            <ins title="nlp 2.00">c</ins>
+            <ins class="alt" title="nlp 2.00">C</ins>
           </span>
         </span>
       </span>
