--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0381.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0381.html
@@ -143,7 +143,7 @@
         </span>
         <span id="w_25" class="ocr_word" title="bbox 619 431 884 488" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00"> εἰρηνικῶν</ins>
+            <ins title="nlp 2.00">εἰρηνικῶν</ins>
           </span>
         </span>
         <span id="w_26" class="ocr_word" title="bbox 922 427 1156 475" lang="grc">
@@ -443,9 +443,14 @@
             <ins class="alt" title="nlp 1.00">ὥσπερ</ins>
           </span>
         </span>
-        <span id="w_83" class="ocr_word" title="bbox 1564 891 1797 957" lang="grc">
+        <span id="w_83_0" class="ocr_word" title="bbox 1564 891 1797 957">
           <span class="alternatives">
-            <ins title="nlp 2.00">ὁ Ἕκτωρ</ins>
+            <ins class="alt" title="nlp 2.00">ὁ</ins>
+          </span>
+        </span>
+        <span id="w_83_1" class="ocr_word" title="bbox 1564 891 1797 957">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">Ἕκτωρ</ins>
           </span>
         </span>
       </span>
