--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0421.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0421.html
@@ -1380,19 +1380,14 @@
             <ins class="alt" title="nlp 1.00">αὐτόν</ins>
           </span>
         </span>
-        <span id="w_270_0_0" class="ocr_word" title="bbox 1076 2679 1168 2749">
+        <span id="w_270_0_0_0" class="ocr_word" title="bbox 1076 2679 1168 2749">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00">(εἰς</ins>
           </span>
         </span>
-        <span id="w_270_0_1" class="ocr_word" title="bbox 1076 2679 1168 2749">
+        <span id="w_270_0_0_1" class="ocr_word" title="bbox 1076 2679 1168 2749">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00"/>
-          </span>
-        </span>
-        <span id="w_271" class="ocr_word" title="bbox 1204 2682 1543 2747" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τετρακοσίους</ins>
           </span>
         </span>
       </span>
