--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0384.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0384.html
@@ -833,8 +833,7 @@
         </span>
         <span id="w_160" class="ocr_word" title="bbox 1096 1598 1105 1607">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">’</ins>
-            <del title="nlp 0.90">’</del>
+            <ins title="nlp 2.00">·</ins>
           </span>
         </span>
         <span id="w_161" class="ocr_word" title="bbox 1135 1600 1160 1630" lang="grc">
