--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0386.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0386.html
@@ -124,9 +124,14 @@
             <ins class="alt" title="nlp 1.00">τοὺς</ins>
           </span>
         </span>
-        <span id="w_23" class="ocr_word" title="bbox 1668 375 1956 433" lang="grc">
+        <span id="w_23_0" class="ocr_word" title="bbox 1668 375 1956 433">
           <span class="alternatives">
-            <ins title="nlp 2.00">Αἴαντας v.</ins>
+            <ins class="alt" title="nlp 2.00">Αἴαντας</ins>
+          </span>
+        </span>
+        <span id="w_23_1" class="ocr_word" title="bbox 1668 375 1956 433">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">V.</ins>
           </span>
         </span>
       </span>
@@ -1472,9 +1477,14 @@
             <ins class="alt" title="nlp 1.00">ἑαυτὸν</ins>
           </span>
         </span>
-        <span id="w_288" class="ocr_word" title="bbox 425 2622 731 2686" lang="grc">
+        <span id="w_288_0" class="ocr_word" title="bbox 425 2622 731 2686">
           <span class="alternatives">
-            <ins title="nlp 2.00">συνήλασας.</ins>
+            <ins class="alt" title="nlp 2.00">συνήλασας·</ins>
+          </span>
+        </span>
+        <span id="w_288_1" class="ocr_word" title="bbox 425 2622 731 2686">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_289" class="ocr_word" title="bbox 791 2640 891 2671" lang="grc">
@@ -1500,11 +1510,6 @@
         <span id="w_293" class="ocr_word" title="bbox 1343 2620 1686 2687" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">κατωρθωκὼς</ins>
-          </span>
-        </span>
-        <span id="w_294" class="ocr_word" title="bbox 1735 2618 1881 2686" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">κἀμοὶ</ins>
           </span>
         </span>
       </span>
