--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0387.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0387.html
@@ -79,8 +79,7 @@
         </span>
         <span id="w_13" class="ocr_word" title="bbox 1800 310 1810 320">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">’</ins>
-            <del title="nlp 0.90">’</del>
+            <ins title="nlp 2.00">·</ins>
           </span>
         </span>
       </span>
@@ -505,8 +504,7 @@
         </span>
         <span id="w_95" class="ocr_word" title="bbox 821 1075 831 1086">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">’</ins>
-            <del title="nlp 0.90">’</del>
+            <ins title="nlp 2.00">·</ins>
           </span>
         </span>
         <span id="w_96" class="ocr_word" title="bbox 872 1062 1084 1127" lang="grc">
